beamer presentation updated

--- a/beamer/main.tex
+++ b/beamer/main.tex
@@ -93,6 +93,9 @@
 \section{Package wwstatviz-webapp - User Interface}
 \input{src/wwstatviz-webapp.tex}
 
+\section{Unit Tests}
+\input{src/tests.tex}
+
 \section{Demo}
 \input{src/demo.tex}
 
