--- a/beamer/main.tex
+++ b/beamer/main.tex
@@ -63,6 +63,7 @@
 % title page
 \title{Python Package for World Wide Statistics Visualization}
 \subtitle{}
+\titlegraphic{\includegraphics[height=2.5cm]{./inc/graphics/fds.png}}
 \author{\footnotesize{Name 1, Name 2, ...}}
 \date{\today}
 \institute{Université de Montpellier}
