modified unit testing in beamer

--- a/beamer/src/tests.tex
+++ b/beamer/src/tests.tex
@@ -1,5 +1,20 @@
+\begin{frame}
+  \frametitle{Unit Testing}
+
+  \begin{itemize}
+    \item Testing technique
+    \item Runs on individual units or components (functions, methods, etc.)
+    \item Validate correctness of code
+    \item Verify if code performs as expected
+\end{itemize}
+
+\end{frame}
+
+
+
 \begin{frame}[fragile,shrink=30]
-  \frametitle{Unit Testing Using pytest}
+  \frametitle{Unit Tests}
+  \framesubtitle{Unit Testing Using pytest}
   
   % what is unit testing
 
