--- a/beamer/src/wwstatviz-webapp.tex
+++ b/beamer/src/wwstatviz-webapp.tex
@@ -20,17 +20,6 @@
 
 The following code aims at displaying "Hello World!" on a web page: 
 
-  \begin{lstlisting}[language=Python,numbers=left]
-    from flask import Flask
-    app = Flask(__name__)
-
-    @app.route("/")
-    def hello():
-        return "Hello World"
-
-
-    if __name__ == "__main__":
-        app.run(debug=False)
-  \end{lstlisting}
+  \includegraphics[scale=0.4]{../inc/graphics/flask.png}
 
 \end{frame}
