update introduction tex file

--- a/beamer/src/introduction.tex
+++ b/beamer/src/introduction.tex
@@ -10,6 +10,21 @@
 
 % we choose as a proof-of-concept the task consisting of visualizing world wide
 % statistics.
+  Many python packages for generating plots (matplotlib, plotly, etc.):
+  \begin{itemize}
+    \item Have lot of information to remember
+    \item Have very long documentation
+    \item Take time to get used to
+  \end{itemize}
+
+  \vspace{10mm}
+
+
+  What about aggregating all of these packages into one package that is :
+  \begin{itemize}
+      \item Task oriented
+      \item Easy to use 
+  \end{itemize}
 \end{frame}
 
 \begin{frame}[fragile,shrink=30]
