Modifications on first slide test.tex

--- a/beamer/src/tests.tex
+++ b/beamer/src/tests.tex
@@ -2,10 +2,11 @@
   \frametitle{Unit Testing}
 
   \begin{itemize}
-    \item Testing technique
-    \item Runs on individual units or components (functions, methods, etc.)
-    \item Validate correctness of code
-    \item Verify if code performs as expected
+    \item **F**ast
+    \item **I**solated
+    \item **R**epetable 
+    \item **S**elf-validating
+    \item **T**imely
 \end{itemize}
 
 \end{frame}
