--- a/beamer/src/conclusion.tex
+++ b/beamer/src/conclusion.tex
@@ -1,16 +1,17 @@
 \begin{frame}[fragile]{Conclusion}
 
 \centering
-\begin{block}{What we learnt}
+\begin{block}{What we have learned}
     \begin{itemize}
         \item Learn more about geospatial visualization techniques;
-        \item Create one package from several Python packages.
+        \item Create one package from several Python packages;
+        \item Manipulate Python classes and link them. 
     \end{itemize}
 \end{block}
 
 \begin{block}{What can be improved}
     \begin{itemize}
-            \item A web application;
+            \item End the development of the web application;
             \item More custom options for the figures we are able to create.
         \end{itemize}
 \end{block}
