--- a/beamer/src/tests.tex
+++ b/beamer/src/tests.tex
@@ -42,7 +42,7 @@
   \begin{figure}[h]
     \centering
     \includegraphics[scale=0.3]{tests.png}
-    \caption{Unit Test Exection}
+    \caption{Unit Test Execution}
     \label{fig:tests}
   \end{figure}
   
