update test part

--- a/beamer/src/tests.tex
+++ b/beamer/src/tests.tex
@@ -2,11 +2,11 @@
   \frametitle{Unit Testing}
 
   \begin{itemize}
-    \item **F**ast
-    \item **I**solated
-    \item **R**epetable 
-    \item **S**elf-validating
-    \item **T**imely
+    \item \textbf{F}ast
+    \item \textbf{I}solated
+    \item \textbf{R}epetable 
+    \item \textbf{S}elf-validating
+    \item \textbf{T}imely
 \end{itemize}
 
 \end{frame}
@@ -41,7 +41,7 @@
 
   \begin{figure}[h]
     \centering
-    \includegraphics[scale=0.3]{tests.png}
+    \includegraphics[scale=0.3]{test.png}
     \caption{Unit Test Execution}
     \label{fig:tests}
   \end{figure}
